fix overflow text foot

--- a/src/_includes/css/style.css
+++ b/src/_includes/css/style.css
@@ -143,8 +143,6 @@
 }
 
 .slide--content {
-  position: relative;
-  /* Esto asegura que el contenido no se corte al moverse */
   overflow: hidden;
   /* Transición por defecto */
   transition: transform 0.5s ease-in-out;
@@ -178,7 +176,6 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100dvh;
   background: #fcfcfc;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
@@ -203,10 +200,6 @@ h1, .h1 {
 
 h2, .h2 {
   font-size: clamp(1.5rem, 5vw, 1.8rem);
-}
-
-#main {
-  position: fixed;
 }
 
 .header {
